--- a/AUDIT-2026-01-31.md
+++ b/AUDIT-2026-01-31.md
@@ -1,125 +1,89 @@
-# Caferico Full Audit — 31 januari 2026
+# Caferico Planning — Gecalibreerd 1 feb 2026
 
-## Samenvatting
-
-4 parallelle analyses uitgevoerd: Code Quality & Architectuur, Security & Deployment, UX & Features, GitHub Status.
-
-**Totaaloordeel:** Visueel en technisch sterk fundament (premium design, goede SEO, i18n compleet, accessibility). Maar meerdere features zijn mock/placeholder, er zijn security issues die vóór launch gefixt moeten worden, en de backend-integraties zijn gecodeerd maar nog niet live geactiveerd.
-
----
-
-## 🔴 P0 — BLOKKEERDERS (fix vóór launch)
-
-### Security
-1. **Webhook idempotency naar database** — in-memory `Set` gaat verloren bij restart → duplicate orders. Moet Drizzle tabel worden met UNIQUE constraint op `molliePaymentId`
-2. **WooCommerce credentials via HTTP Basic Auth** — nu in URL query params (lekt in logs). Verander naar `Authorization: Basic base64(key:secret)` in alle 4 bestanden
-3. **Rate limiting op /api/checkout** — geen bescherming tegen bot-spam. `@upstash/ratelimit` of in-memory token bucket
-4. **Webhook secret token** — voeg `?token=RANDOM_SECRET` toe aan Mollie webhook URL
-5. **CSRF check op checkout POST** — verify Origin header
-
-### Functionaliteit
-6. **Contact form backend** — nu `console.log()`. Koppelen aan Resend (al in stack)
-7. **Newsletter form backend** — nu `console.log()`. Koppelen aan email service
-8. **Shop filters aansluiten** — type/format/form filters zijn pure UI, filteren niets
-9. **Mollie redirect fix** — `NEXT_PUBLIC_BASE_URL` in Coolify env vars
-10. **Google OAuth redirect URI** — toevoegen in Google Cloud Console
-
-### Wettelijk (GDPR)
-11. **Cookie consent banner** — verplicht in België, ontbreekt volledig
-12. **Privacy & Cookie beleid pagina** — live site heeft dit, nieuwe app niet
-13. **Algemene Voorwaarden pagina** — verplicht voor e-commerce
+## ✅ AFGEROND
+- #2 WC credentials → HTTP Basic Auth (`lib/wc-client.ts`)
+- #14 WC API client geconsolideerd → shared `wcFetch`
+- #15 Duplicate `resolveCollection` → single source of truth
+- #16 Error boundaries → 3 `error.tsx` bestanden
+- #17 Hardcoded `nl-NL` → dynamisch per locale
+- #18 API error sanitization → generieke messages naar client
+- #19 Security headers → 6 headers + `poweredByHeader: false`
+- #21 `npm audit` in CI → toegevoegd
+- Repo opruiming → 4 stale branches verwijderd (local + remote)
 
 ---
 
-## 🟡 P1 — HOGE PRIORITEIT (binnen 2 weken na launch)
+## 🔴 P0 — Vóór launch
 
-### Code Quality
-14. **Consolideer WC API client** — 4 bestanden met duplicate fetch logic → 1 shared `wcFetch` helper
-15. **Fix duplicate `resolveCollection()`** — bestaat in types/product.ts EN ShopCatalog.tsx met **verschillende mappings** (coffee vs beans)
-16. **Error boundaries** — geen `error.tsx` bestanden, unhandled errors tonen Next.js default
-17. **Fix hardcoded `nl-NL`** in product page prijsformattering → moet locale gebruiken
-18. **Generieke error messages** — API routes lekken interne details
+### Security (code — Guts kan autonoom)
+1. **Webhook idempotency** → Drizzle tabel met UNIQUE op molliePaymentId (in-memory Set verloren bij restart)
+2. **Rate limiting** op /api/checkout → `@upstash/ratelimit` of in-memory token bucket
+3. **Webhook secret token** → `?token=RANDOM_SECRET` in Mollie webhook URL
+4. **CSRF check** op checkout POST → verify Origin header
+5. **Merge `ralph/fix-api-metadata`** → sanitize-html XSS protection (1 commit, klaar)
 
-### Security
-19. **Security headers** in next.config.mjs — CSP, X-Frame-Options, HSTS, Permissions-Policy
-20. **Auth op checkout/status** — nu kan iedereen payment status opvragen met een ID
-21. **`npm audit` in CI pipeline** toevoegen
-22. **Pin next-auth versie** — beta software, `^5.0.0-beta.30` kan onverwacht breken
+### Functionaliteit (code — Guts kan autonoom)
+6. **Contact form → Resend** koppelen (nu `console.log()`)
+7. **Newsletter form → email service** koppelen (nu `console.log()`)
+8. **Shop filters** daadwerkelijk aansluiten (nu pure UI, filteren niets)
 
-### Features
-23. **Account adres bewerken** — nu read-only
-24. **Smaak/Terroir pagina** — vermeld in CONTEXT.md als bestaande content, ontbreekt als route
-25. **Echte product images** — sommige producten hebben gradient placeholders
-26. **Drizzle push** als post-deployment command in Coolify
+### Env/config (Jonathan nodig)
+9. **`NEXT_PUBLIC_BASE_URL`** in Coolify env vars (Mollie redirect fix)
+10. **Google OAuth redirect URI** in Google Cloud Console
+11. **Drizzle push** als post-deployment command in Coolify
 
----
+### Wettelijk (content nodig)
+12. **Cookie consent banner** bouwen (verplicht in België)
+13. **Privacy & Cookie beleid** pagina
+14. **Algemene Voorwaarden** pagina
 
-## 🎨 UI POLISH (pre-launch)
-
-40. **Meer contrast / vibrante kleuren** — UI is te donker op dit moment. Overall kleurpalet lichter en levendiger maken
-41. **Product foto achtergronden** — foto's moeten achtergrondkleur hebben die matcht met de achtergrond van de pagina waarop ze staan (seamless look). Waar mogelijk voor alle producten, maar realistisch niet voor allemaal haalbaar
-
----
-
-## 🟢 P2 — BACKLOG (post-launch)
-
-27. **Subscription checkout flow** — tier cards bestaan maar knoppen doen niets (Mollie Recurring)
-28. **B2B pricing** — wholesale pricing in Next.js (vervangt WholesaleX)
-29. **Blog CMS integratie** — nu hardcoded JSON, geen dynamische content
-30. **Google Maps** op verkooppunten pagina — nu placeholder
-31. **Database pool size** verhogen (nu max: 1)
-32. **Redis/persistent cache** — in-memory cache verloren bij restart
-33. **Integration tests** voor checkout + webhook flow
-34. **`generateStaticParams`** voor product pages (SSG)
-35. **Coupon/kortingscodes** in checkout
-36. **Order tracking pagina**
-37. **Email marketing service** kiezen (Resend/Loops/Brevo — vervangt MailPoet)
-38. **Analytics** (GA4 of privacy-friendly alternatief)
-39. **Facturatie n8n workflow** (geparkeerd — Jonathan bepaalt)
+### UI Polish (design keuzes nodig)
+15. **Meer contrast / vibrante kleuren** (te donker nu)
+16. **Product foto achtergronden** matchen met pagina achtergrond
 
 ---
 
-## 🧹 REPO OPRUIMING
-
-### Stale branches (volledig gemerged, kunnen weg)
-- `ralph/caferico-frontend` (local + remote)
-- `ralph/auth` (local + remote)
-- `ralph/mollie-checkout` (local + remote)
-- `fix/auth-redirect` (local + remote)
-
-### Ongemerged werk
-- **`ralph/fix-api-metadata`** — 1 commit: `sanitize-html` voor XSS protection op product descriptions. Moet gemerged worden (nuttige security fix).
-
-### Broken CI
-- **"Deploy Flowchart to GitHub Pages"** workflow — 11/11 runs gefaild. Verwijderen of fixen.
+## 🟡 P1 — Rond launch
+17. **Auth op checkout/status** endpoint (nu openbaar)
+18. **Pin next-auth** op exacte versie (beta software)
+19. **Account adres bewerken** (nu read-only)
+20. **Smaak/Terroir pagina** toevoegen (vermeld in CONTEXT.md, ontbreekt)
+21. **Echte product images** (gradient placeholders vervangen)
 
 ---
 
-## 📊 HUIDIGE STAAT PER FLOW
-
-| Flow | Code | Werkend | Notities |
-|------|------|---------|----------|
-| Shop/Catalog | ✅ | ⚠️ | Valt terug op mock data als WC API faalt. Filters niet aangesloten |
-| Product Detail | ✅ | ⚠️ | Hardcoded nl-NL prijzen. Sommige placeholder images |
-| Cart | ✅ | ✅ | Robuust: localStorage, validatie, varianten |
-| Checkout/Mollie | ✅ | ❌ | Redirect naar localhost (NEXT_PUBLIC_BASE_URL ontbreekt) |
-| Auth (magic link) | ✅ | ⚠️ | Code werkt, Resend geconfigureerd, maar Google OAuth 401 |
-| Account | ✅ | ⚠️ | Read-only. Duplicate WC fetch logic |
-| Contact form | ✅ UI | ❌ | console.log(), geen email |
-| Newsletter | ✅ UI | ❌ | console.log(), geen backend |
-| Subscriptions | ✅ UI | ❌ | Knoppen doen niets |
-| Blog | ✅ | ⚠️ | Hardcoded JSON, geen CMS |
-| i18n | ✅ | ✅ | 4 talen, 710 keys elk, 100% compleet |
-| SEO | ✅ | ✅ | Structured data, sitemap, robots, meta |
+## 🟢 P2 — Post-launch backlog
+22. **Subscription checkout** — Mollie Recurring voor 3 tiers (Proeverij, Klassiek, Atelier). Knoppen bestaan, doen niets.
+23. **B2B pricing** — Wholesale in Next.js: bedrijfsaccounts, BTW-nummer, staffelprijzen, min. bestelwaarde. Vervangt WholesaleX.
+24. **Blog CMS** — Nu hardcoded JSON (3 posts). WordPress REST API als bron (draait al) of headless CMS.
+25. **Google Maps** — Verkooppunten pagina heeft placeholder kaart. Needs Maps API key.
+26. **Database pool size** — Nu `max: 1`. Verhogen naar 5-10 voor concurrency.
+27. **Redis/persistent cache** — In-memory cache (1h TTL) verloren bij restart. Redis voor productie.
+28. **Integration tests** — Geen enkel testbestand. Jest/Vitest voor checkout + auth flow.
+29. **generateStaticParams** — Product pages als statische HTML bij build (snellere laadtijd).
+30. **Coupon/kortingscodes** — Geen coupon veld in checkout. WooCommerce coupons API koppelen.
+31. **Order tracking** — Detail/tracking pagina met status + verzendinfo.
+32. **Email marketing** — Service kiezen (Resend/Loops/Brevo). Vervangt MailPoet.
+33. **Analytics** — GA4 of privacy-friendly (Plausible/Umami self-hosted op Hetzner).
+34. **Facturatie n8n workflow** — Geparkeerd. Formulier → PDF factuur + Mollie betaallink.
 
 ---
 
-## AANBEVOLEN VOLGORDE
+## 📊 Status per flow
 
-**Fase 2E zou eigenlijk moeten heten: "Backend Activatie & Launch Prep"**
-
-1. **Week 1:** P0 Security fixes (#1-5) + env vars fixen (#9-10)
-2. **Week 2:** P0 Functionaliteit (#6-8) + wettelijke pagina's (#11-13)
-3. **Week 3:** P1 Code quality (#14-18) + security headers (#19-22)
-4. **Week 4:** P1 Features (#23-26) + repo opruiming + merge sanitize-html
-5. **Post-launch:** P2 items op basis van gebruikersfeedback
+| Flow | Status | Blokkeerder |
+|------|--------|-------------|
+| Shop/Catalog | ⚠️ | Filters niet aangesloten (#8) |
+| Product Detail | ✅ | — |
+| Cart | ✅ | — |
+| Checkout/Mollie | ❌ | NEXT_PUBLIC_BASE_URL (#9) |
+| Auth (magic link) | ⚠️ | Google OAuth (#10) |
+| Account | ✅ | — |
+| Contact form | ❌ | Backend ontbreekt (#6) |
+| Newsletter | ❌ | Backend ontbreekt (#7) |
+| Subscriptions | ❌ | Mollie Recurring (#22, P2) |
+| Blog | ⚠️ | Hardcoded JSON (#24, P2) |
+| i18n | ✅ | — |
+| SEO | ✅ | — |
+| Error handling | ✅ | — |
+| Security headers | ✅ | — |
